--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
   "author": "Digital Edu Management",
   "license": "MIT",
   "dependencies": {
-    "@mui/x-date-pickers": "^7.18.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.3",
     "@mui/styles": "^5.11.13",
+    "@mui/x-date-pickers": "^7.18.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "i18next": "^24.2.2",
     "lodash": "^4.17.21",
     "object-assign": "^4.1.1",
     "rc-tree": "^5.13.0"
@@ -59,10 +60,10 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.16.7",
+    "react-redux": "^7.2.4",
     "react-resize-context": "^3.0.0",
     "react-select": "^5.10.0",
     "react-to-print": "^2.5.1",
-    "react-redux": "^7.2.4",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
   },
